# 6CCSAHAI_CW1

./: .env.example  .gitignore  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  app.py  dependencies_log.txt  deploy.sh  extract_learning_material.py  package-lock.json  parsed_data.json  pyproject.toml  pytest.ini  test.py  verify_setup.py
backend/: __init__.py
backend/api/: main.py
backend/api/routes/: __init__.py  course.py  performance.py  questions.py  videos.py
backend/course_service/data/: parsed_data.json
backend/course_service/models/: course.py
backend/course_service/routes/: course.py
backend/course_service/services/: course_loader.py  course_service.py
backend/course_service/tests/: test_course_loader.py
backend/quiz_service/models/: question.py  user_state.py
backend/quiz_service/routes/: performance.py  questions.py
backend/quiz_service/tests/: test_models.py  test_question_quality.py  test_tracking.py
backend/scripts/: verify_setup.py
backend/services/video/: tts_service.py
backend/shared/utils/: config.py
backend/user_profile/: __init__.py
backend/user_profile/models/: __init__.py  profile.py
backend/user_profile/services/: __init__.py  profile_service.py
backend/utils/: course_loader.py
backend/video_service/assets/: pre_scaler.py
backend/video_service/diagnostics/: debug_elevenlab.py  debug_reel_timing.py  diagnose_timestamps.py
backend/video_service/models/: video.py
backend/video_service/routes/: videos.py
backend/video_service_v2/: __init__.py
data/: course_material.json
frontend/: TEST_README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
pages/: quiz.py  video_feed.py
scripts/: verify_setup.py
src/models/: user_state.py
src/utils/: config.py  course_loader.py
tests/llm/: test_explanation_quality.py  test_question_quality.py
tests/unit/: test_course_loader.py  test_models.py  test_tracking.py
video_diagnostics/: debug_elevenlab.py  debug_reel_timing.py  diagnose_timestamps.py
videos/: pre_scaler.py
(+88 files in other folders)
