[project]
name = "coursework_1"
version = "0.1.0"
description = "Streamlit app for PDF upload"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]

