[project]
name = "coursework_1"
version = "0.1.0"
description = "Adaptive Learning Platform with AI-generated questions and personalized content"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "mistralai>=0.1.0",
    "pydantic>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "elevenlabs>=0.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "llama-cloud-services>=0.6.81",
    "requests>=2.31.0",
    "itsdangerous>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "deepeval>=0.20.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
